projet_gl/src/test/deca/context/valid/3_42/3_42_3_New.deca
// Description:
//    Programme minimaliste faisant un New
//
// Resultats:
//
// Historique:
//    cree le 17/01/2024

class A {
    int x1;
    int y;
}

class B {
    A a;
}